# haskell-data-structures

./: README.md  haskell-data-structures.cabal  stack.yaml
src/: Lib.hs  Stack.hs  Tree.hs  UnbalancedSet.hs
src/Set/: Set.hs
test/: StackSpec.hs  TreeSpec.hs  UnbalancedSetSpec.hs
