name:                haskell-data-structures
version:             0.1.0.0
synopsis:            Implementation of functional data structures
description:         Please see README.md
homepage:            https://github.com/paulo-tutorials/haskell-data-structures
license:             BSD3
license-file:        LICENSE
author:              paulojean
maintainer:          
copyright:           2016 paulojean
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Stack
                     , Set.Set
                     , UnbalancedSet
  build-depends:       base >= 4.7 && < 5
                     , text
  default-language:    Haskell2010

test-suite haskell-data-structures-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-data-structures
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-data-structures
